# Influence_Price_Forecaster

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
source/: data_augment_script.py  data_feed_script.py  dataset_building.py  evaluation.py  inspect_dataset.py  manual_prediction_script.py  queries.py  train_model.py  train_model_script.py
tests/: test_os_ai_forecaster.py
