[tool.poetry]
name = "OS_AI_Forecaster"
version = "0.1.0"
description = ""
authors = ["Michael Verdegaal <michaelverdegaal@hotmail.nl>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.4"
tensorflow-gpu = "^2.7.0"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
